                    ------------------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

February 24, 2021 D.Sawkey (OpNovice2-V10-07-00)
- replace deprecated optical commands and parameters with new ones

October 30, 2020 D.Sawkey (OpNovice2-V10-06-07)
- migration to G4RunManagerFactory, and don't set number of threads in main
- print histogram statistics at end of run
- remove G4Timer
- update macro verbosity, ignore threads except 0
- apply clang-format style

October 5, 2020 D.Sawkey (OpNovice2-V10-06-06)
- new macro boundary.mac, exercising all 4 boundary models. Remove
  glisur.mac and unified.mac.
- rename OpNovice2.in to OpNovice2.mac

August 4, 2020 D.Sawkey (OpNovice2-V10-06-05)
- Add material properties using new interface with std::vectors

July 10, 2020 D.Sawkey (OpNovice2-V10-06-04)
- calculate reflection/transmission probabilities vs. angle
    (new macro fresnel.mac)
- histos: add axis labels, id's; refer to them by id in some places

May 29, 2020 D.Sawkey (OpNovice2-V10-06-03)
- add code to generate statistics for wavelength shifting
- add wls.mac to test WLS and new process WLS2

May 24, 2020 D.Sawkey (OpNovice2-V10-06-02)
- use new scintillation time constant parameter

January 30, 2020 D.Sawkey (OpNovice2-V10-06-01)
- remove redundant G4AnalysisManager::Instance calls

January 21, 2020 D.Sawkey (OpNovice2-V10-06-00)
- remove string comparisons and redundant calls in SteppingAction

November 26, 2019 I. Hrivnacova (OpNovice2-V10-05-02)
- Fixed formatting in .README.txt

October 29, 2019 D.Sawkey (OpNovice2-V10-05-01)
 - macros: give unique analysis filenames

August 30, 2019 D.Sawkey (OpNovice2-V10-05-00)