@@ -43,6 +43,7 @@ set(OpNovice2_SCRIPTS
     OpNovice2.out
     OpNovice2.mac
     boundary.mac
+    complexRindex.mac
     electron.mac
     fresnel.mac
     scint_by_particle.mac
